<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/layout_root"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    android:padding="10dp" >

    <EditText
        android:id="@+id/name_input"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" 
        android:hint="@string/bill_name_bill" />

    <EditText
        android:id="@+id/cost_input"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:hint="@string/bill_cost"
        android:inputType="number" />
        
    <Spinner
	    android:id="@+id/occurance_input"
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content" />
    
    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:hint="@string/bill_next_due" />
    
    <Spinner
    	android:id="@+id/day_input"
    	android:layout_width="fill_parent"
    	android:layout_height="wrap_content" />
    
    <Spinner
    	android:id="@+id/month_input"
    	android:layout_width="fill_parent"
   		android:layout_height="wrap_content" />
    
    <Spinner
    	android:id="@+id/year_input"
    	android:layout_width="fill_parent"
    	android:layout_height="wrap_content" />
    
    <Button
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/text_update" 
        android:onClick="modifyRecurringExpense"/>
    
    <Button
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/text_delete" 
        android:onClick="deleteRecurringExpense"/>
 
</LinearLayout>