<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/layout_root"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    android:padding="10dp" >
    
    <Button
        android:id="@+id/edit_income"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/menu_edit_income" 
        android:onClick="openSelected"/>

     <Button
        android:id="@+id/edit_bills"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/menu_edit_bills" 
        android:onClick="openSelected"/>
     
     <Button
        android:id="@+id/edit_spending_categories"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/menu_edit_spending_categories" 
        android:onClick="openSelected"/>
     
     <Button
        android:id="@+id/edit_savings"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/menu_edit_savings" 
        android:onClick="openSelected"/>

</LinearLayout>
