<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/layout_root"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    android:padding="10dp" >

    <TextView 
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textSize="24sp"
        android:text="@string/balance_underline" />
    
    <TextView 
        android:id="@+id/balance_display"
		android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textSize="20sp"
        android:text="" />
    
    <View
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:layout_weight="1" >
    </View>

    <Button
        android:id="@+id/add_expense"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/menu_deduct_funds" 
        android:onClick="openSelected"/>
        
     <View
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:layout_weight="1" >
    </View>
     <Button
        android:id="@+id/add_funds"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/menu_add_funds" 
        android:onClick="openSelected"/>

     <View
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:layout_weight="1" >
    </View>
     <Button
        android:id="@+id/edit_information"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/menu_edit_information" 
        android:onClick="openSelected"/>
    
    <View
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:layout_weight="1" >
    </View>
    <Button
        android:id="@+id/statistics"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/menu_statistics" 
        android:onClick="openSelected"/>
     
     <View
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:layout_weight="1" >
    </View>
     <Button
        android:id="@+id/user_guide"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/menu_user_guide" 
        android:onClick="openSelected"/>
     
     <View
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:layout_weight="1" >
    </View>
    
</LinearLayout>
